databases/POC_list_2/secondary/nohup.out
  File "/home/atarzia/thesource/cage_collect/sort_structures.py", line 44
    logging.info(f'> started with: {len(refcodes)} CIFs to sort.')
                                                                ^
SyntaxError: invalid syntax
